fixed table rate alignment + important icon

--- a/src/app/shared/components/data-table/data-table.component.scss
+++ b/src/app/shared/components/data-table/data-table.component.scss
@@ -68,6 +68,11 @@
                         align-items: center;
                         gap: 0.5rem;
 
+
+                        &.right {
+                            justify-self: flex-end;
+                        }
+
                         i {
                             font-size: 1.125rem;
                             opacity: 0.5;
@@ -105,6 +110,13 @@
 
                     td {
                         border-bottom: 1px solid #ebebeb;
+
+                        i.material-icons {
+                            color: var(--text-g-800);
+                            font-size: 18px;
+                            line-height: 100%;
+                            vertical-align: middle;
+                        }
                     }
 
                     &:last-child td {
